--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,19 @@ h1 {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  color: black;
+}
+
 #main-temperature {
   font-size: 60px;
   padding-bottom: 1px;
@@ -32,7 +45,6 @@ h1 {
 
 .city-card {
   margin-left: -2px;
-  padding: 15px;
 }
 
 .days-card {
@@ -104,14 +116,6 @@ span.temperature-friday {
   margin: 30px auto;
 }
 
-.weather-condition {
-  font-size: 22px;
-}
-
-.weather-condition-icon {
-  font-size: 30px;
-}
-
 a.active {
   color: black;
   cursor: default;
@@ -123,6 +127,8 @@ a.active {
 
 #degree-conversion {
   font-size: 20px;
+  position: relative;
+  top: -27px;
 }
 
 #celsius-link,
@@ -135,5 +141,16 @@ a.active {
 }
 
 #icon {
-  size: 10px;
+  padding-right: 25px;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+}
+
+#weather-condition {
+  font-size: 20px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
 }
